# Py_WEB_HW_6

./: Script.sql  connect.py  homework.db  pyproject.toml  seeds.py
query/: query_1.py  query_1.sql  query_10.py  query_10.sql  query_11.sql  query_12.sql  query_2.py  query_2.sql  query_3.py  query_3.sql  query_4.py  query_4.sql  query_5.py  query_5.sql  query_6.py  query_6.sql  query_7.py  query_7.sql  query_8.py  query_8.sql  query_9.py  query_9.sql
