[tool.poetry]
name = "homework-6"
version = "0.1.0"
description = ""
authors = ["Oleksii Latypov <oleksii.latypov.la@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_6"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
